--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Conceitos do JavaScript</title>
-        <link rel="stylesheet" href="./style.css">
+       <link rel="stylesheet" href="/style.css" >
         <script type="text/javascript" src="./js/main.js"></script>
     </head>
-    <body>
+    <body onload="load()">
         <h1>Trabalhando com javascript</h1>
 
+        <button type="button" onclick="clicou()">Clique aqui</button>
+        <p id="agradecimento" onclick="redirecionamento()"></p>
+        <p id="mousemove" onmousemove="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+        <p id="mousemove2" onmousemove="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+        <select onchange="funcaochange(this)">
+            <option value="1">Valor 1</option>
+            <option value="2">Valor 2</option>
+            <option value="3">Valor 3</option>
+        </select>
     </body>
 </html>
